# gvp_stockfish

./: .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
darwin/: gvp_stockfish.podspec
darwin/Classes/: stockfish.cpp
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/gvp_stockfish_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
lib/: gvp_stockfish.dart  stockfish_bindings_generated.dart
lib/src/: callbacks.dart  gvp_stockfish.dart  handlers.dart  library.dart  stockfish_bindings_generated.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  stockfish.cpp  stockfish.h
